--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -89,6 +89,7 @@ body {
 .section {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center; 
     position: relative;
