Advanced paginate is workin
Got a button-page specific pagination to work. Good enough for now until i can do responsive/live buttons. (like the npm packages I tried)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -83,6 +83,10 @@ p {
     color: $white;
 }
 
+.dark-grey {
+    color: $dark-grey;
+}
+
 label {
     font-size: 11px;
     color: $dark-grey;
@@ -159,7 +163,7 @@ input:focus {
 
 :required {
     border: 1px solid $light-red .5;
-  }
+}
 
 
 
