started adding navbar
navbar but still needs hamburger menu

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -198,13 +198,13 @@ input:focus {
     -moz-osx-font-smoothing: grayscale;
     color: $black;
 }
-#nav {
-    padding: 30px;
-    a {
-        font-weight: bold;
-        color: #2c3e50;
-        &.router-link-exact-active {
-        color: #42b983;
-        }
-    }
-}
+// #nav {
+//     padding: 30px;
+//     a {
+//         font-weight: bold;
+//         color: #2c3e50;
+//         &.router-link-exact-active {
+//         color: #42b983;
+//         }
+//     }
+// }
